Include sitemap output files for interview demonstration
- Update .gitignore to show sitemap output but hide database files
- Add data/sitemap/sitemap.xml - Generated sitemap with actual URLs
- Add data/sitemap/robots.txt - Generated robots.txt file
- Keep urls.db hidden as it's internal database file
- Provide tangible proof of successful sitemap generation for interviews

--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,12 @@ venv/
 .pytest_cache/
 .mypy_cache/
 
-# Project generated data
+# Project generated data - Database files only
 *.db
 *.sqlite
-data/sitemap/
-*.xml
-sitemap*.xml
-robots.txt
+data/urls.db
+
+# Logs (but keep sitemap output visible for demonstration)
 logs/
 *.log
 
